blight and Light initial setups including torch starting relic

--- a/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Power-Strings.json
+++ b/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Power-Strings.json
@@ -31,6 +31,15 @@
                 ]
         },
 
+        "DarkestMod:PowerBlight": {
+                "NAME": "Blight",
+                "DESCRIPTIONS": [
+                        "At the End of your turn, deal #b damage",
+                        " enemy.",
+                        " enemies."
+                ]
+        },
+
         "DarkestMod:PowerStress": {
         "NAME": "Stress",
         "DESCRIPTIONS": [
