blight and Light initial setups including torch starting relic

--- a/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Relic-Strings.json
+++ b/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Relic-Strings.json
@@ -4,7 +4,7 @@
     "NAME": "Torch Light Relic",
     "FLAVOR": "The light protects.",
     "DESCRIPTIONS": [
-      "Gain #b1 [E] ."
+      "Gain #b1 Light ."
     ]
   },
   "DarkestMod:PlaceholderRelic": {
