--- a/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -1,7 +1,7 @@
 {
   "DarkestMod:Provisions": {
     "NAME": "Provisions",
-    "DESCRIPTION": "And apply !B! block"
+    "DESCRIPTION": "Apply !B! block"
   },
 
   "DarkestMod:skillTorch": {
