--- a/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -46,7 +46,7 @@
 
   "DarkestMod:Dazzling Light": {
     "NAME": "Dazzling Light",
-    "DESCRIPTION": "Deal !D! damage."
+    "DESCRIPTION": "Deal !D! damage and gain !M! Light."
   },
 
   "DarkestMod:Finale": {
