--- a/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Power-Strings.json
+++ b/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Power-Strings.json
@@ -50,6 +50,13 @@
                         " enemies."
                 ]
         },
+        "DarkestMod:PowerMarked": {
+                "NAME": "Marked",
+                "DESCRIPTIONS": [
+                        "Upon next attack receive double damage",
+                        "Enemy."
+                ]
+        },
 
         "DarkestMod:PowerStress": {
         "NAME": "Stress",
