--- a/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -97,7 +97,7 @@
 
   "DarkestMod:Redeem": {
     "NAME": "Redeem",
-    "DESCRIPTION": "Can only be played when below 40% Max HP. Heal for 25% of Max HP (!M!)"
+    "DESCRIPTION": "Can only be played when below 40% Max HP. Heal for 25% of Max HP "
   },
 
   "DarkestMod:Serpent Sway": {
