Crash fix plus more cards

--- a/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Power-Strings.json
+++ b/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Power-Strings.json
@@ -120,8 +120,8 @@
                 "NAME": "Marked",
                 "DESCRIPTIONS": [
                         "[#550a8a]Marked Enemies take double damage from the next attack.",
-                        "1 stack of [#550a8a]Mark is removed at the end of turn.",
-                        "1 stack of [#550a8a]Mark is removed at the end of turn."
+                        "keyword",
+                        "keyword"
                 ]
         },
 
