--- a/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -45,7 +45,7 @@
 
   "DarkestMod:Flashing Daggers": {
     "NAME": "Flashing Daggers",
-    "DESCRIPTION": "Apply !B! block"
+    "DESCRIPTION": "Add !M! Thrown Daggers into your hand."
   },
 
   "DarkestMod:Get Down": {
@@ -107,7 +107,7 @@
 
   "DarkestMod:Serpent Sway": {
     "NAME": "Serpent Sway",
-    "DESCRIPTION": "Apply !B! block"
+    "DESCRIPTION": "Apply !M! Buffer. Exhaust."
   },
 
   "DarkestMod:Snipers Mark": {
@@ -146,6 +146,11 @@
     "DESCRIPTION": "Apply !B! block"
   },
 
+  "DarkestMod:Wyrd Reconstruction": {
+    "NAME": "Wyrd Reconstruction",
+    "DESCRIPTION": "Gain 3 darkestmod:Bleed and Heal between 0 & 12. Exhaust"
+  },
+
   "DarkestMod:Zealous Accusation": {
     "NAME": "Zealous Accusation",
     "DESCRIPTION": "Apply !B! block"
@@ -168,12 +173,12 @@
 
   "DarkestMod:Blindfire": {
     "NAME": "Blindfire",
-    "DESCRIPTION": "Deal !D! damage."
+    "DESCRIPTION": "Deal !D! damage !M! times."
   },
 
   "DarkestMod:Breakthrough": {
     "NAME": "Breakthrough",
-    "DESCRIPTION": "Deal !D! damage."
+    "DESCRIPTION": "Remove block and Deal !D! damage X times to all enemies."
   },
 
   "DarkestMod:Chop": {
@@ -213,7 +218,7 @@
 
   "DarkestMod:Incision": {
     "NAME": "Incision",
-    "DESCRIPTION": "Deal !D! damage."
+    "DESCRIPTION": "Deal !D! damage. And apply !M! darkestmod:Bleed to the enemy"
   },
 
   "DarkestMod:Lunge": {
@@ -237,7 +242,7 @@
 
   "DarkestMod:Punish": {
     "NAME": "Punish",
-    "DESCRIPTION": "Deal !D! damage. And apply !M! darkestmod:Bleed to the enemy"
+    "DESCRIPTION": "Deal !D! damage. And trigger the darkestmod:Bleed effect on the enemy"
   },
 
   "DarkestMod:Rake": {
@@ -257,7 +262,7 @@
 
   "DarkestMod:Sniper Shot": {
     "NAME": "Sniper Shot",
-    "DESCRIPTION": "Deal !D! damage."
+    "DESCRIPTION": "Deal !D! damage and apply 1 darkestmod:Marked."
   },
 
   "DarkestMod:ThrownDagger": {
